# WormProfiler

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/io/: ImageLoader.cpp  ImageLoader.h
src/ui/: mainwindow.cpp  mainwindow.h
